[package]
name = "watchtower-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
plugin = { git = "https://github.com/talaia-labs/rust-teos", package = "watchtower-plugin" }
simple_logger = "4.3.3"
teos-common = { git = "https://github.com/talaia-labs/rust-teos", package = "teos-common" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
